kubernetes-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: documentserver-namespace
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: documentserver
    env: dev
  name: documentserver
  namespace: documentserver-namespace
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: docker/default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: documentserver
    spec:
      # allow container PID to run as root
      securityContext:
        runAsNonRoot: false
      containers:
        - name: documentserver
          # Registry location, container name and version
          image: onlyoffice/documentserver
          imagePullPolicy: Always
          resources:
            # CPU & memory allocations
            limits:
              cpu: 500m
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 1250Mi
          # License and Configuration file mounts
          volumeMounts:
            - name: configuration
              mountPath: /var/www/onlyoffice/Data/license.lic
              readOnly: true
              subPath: license.lic
            - name: configuration
              mountPath: /etc/onlyoffice/documentserver/default.json
              readOnly: true
              subPath: default.file
      volumes:
        - name: configuration
          configMap:
            defaultMode: 0666
            name: documentserver-license
---
apiVersion: v1
kind: Service
metadata:
  # Create a network endpoint and DNS record within the cluster named documentserver
  name: documentserver
  namespace: documentserver-namespace
spec:
  ports:
    # Accept traffic sent to port 18080
    - name: http
      port: 18080
      targetPort: 18080
  selector:
    # Map to all containers with label
    app: documentserver
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: documentserver
  namespace: documentserver-namespace
spec:
  rules:
    # URL to load balance the application behind
    - host: documentserver.domainname.com
      http:
        paths:
          - backend:
              serviceName: documentserver
              servicePort: 18080
            path: /
  tls:
    - hosts:
        - documentserver.domainname.com
      # TLS certifcate secret
      secretName: documentserversecret-tls
